# ansible-collection-gloo

./: .gitignore  CHANGELOG.md  Makefile  README.md  galaxy.yml  mkdocs.yml  pyproject.toml  requirements.yml
.github/workflows/: release-and-publish.yml  update-galaxy.yml
docs/: index.md
examples/: cleanup_minikube.yml  gloo_mesh.yml  vars.yml
plugins/filter/: sort_versions.py
roles/edge/: README.md
roles/edge/defaults/: main.yml
roles/edge/meta/: main.yml
roles/edge/tasks/: main.yml  register_clusters.yaml
roles/edge/templates/: edge_federation_values.yaml.j2  edge_override_values.yaml.j2  federation_controller_cluster_role.yaml.j2  federation_controller_cluster_role_binding.yaml.j2  gloo_instance.yaml.j2  gloo_instance_secret.yaml.j2  monetization-config-values.yaml.j2  monetization-config.yaml.j2  monetization-secret.yaml.j2  portal_values.yaml.j2  postgres-schema.yaml.j2
roles/istio/: README.md
roles/istio/defaults/: main.yml
roles/istio/meta/: main.yml
roles/istio/tasks/: install.yml  istio_vanilla.yml  main.yml  rollback.yml
roles/istio/templates/: ingressgateway.yaml.j2  istio-cm.json.j2  istio-ingressgateway-service.yaml.j2  istio-operator.yaml.j2  managed-installation.yaml.j2
roles/mesh/: README.md
roles/mesh/defaults/: main.yml
roles/mesh/handlers/: main.yml
roles/mesh/meta/: main.yml
roles/mesh/tasks/: agent_addons.yml  main.yml  register_cluster.yml
roles/mesh/templates/: agent-addons-policy.yaml.j2  agent-addons-values.yaml.j2  agent-values.yaml.j2  mesh-cluster.yaml.j2  mesh-override-values.yaml.j2
(+3 files in other folders)
