[tool.poetry]
name = "kameshsampath.gloo"
version = "0.0.1"
description = "Ansible Collection for managing Solo.io Gloo"
authors = ["Kamesh Sampath <kamesh.sampath@hotmail.com>"]
license = "ASL-2"

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^4.8.0"
jmespath = "^0.10.0"
kubernetes = "^19.15.0"
jsonpatch = "^1.32"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
